# BSO_projekt

./: CMakeLists.txt  README.md  dokumentacja_projektu.md  main.cpp  scriptL.sh
Controllers/: CLIController.cpp  ClientController.cpp  FileController.cpp  QuarantineController.cpp
Headers/: CLIController.h  ClientController.h  ClientHandler.h  ConfigurationVariables.h  FileController.h  FileHasher.h  FileManager.h  QuarantineController.h  QuarantineRecord.h
Socket/: ServerSocket.h  Socket.cpp  Socket.h  SocketException.h  copyright.txt
Source/: ClientHandler.cpp  FileHasher.cpp  FileManager.cpp  QuarantineRecord.cpp
